--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .ProseMirror{
@@ -40,7 +38,6 @@ body{
 /* Main Container */
 .main-wrapper{
   padding: 1rem;
-  background-color: lavender;
   text-align: left;
   max-width: 50rem;
   margin: auto;
@@ -52,10 +49,22 @@ body{
 }
 /* Editing Options container */
 .editing-options-container{
-  
+  padding: 0.5rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
+  overflow-x:scroll;
+  /* flex-wrap: wrap; */
+  border-radius: 3px;
+  box-shadow: 0px 0px 9px 0px rgba(158, 160, 158, 0.5);
+}
+@media (max-width:556px){
+  .editing-options-container{
+    
+    margin:auto;
+     position: fixed;
+     bottom: 0;
+  }
 }
 /* Navbar */
 .nav-wrapper{
@@ -63,22 +72,27 @@ body{
   text-align: left;
 }
 /* Formatting Buttons */
-
+.text-style-btns-wrapper{
+  display: flex;
+}
 .btn-styling{
-  padding: 0.25rem 0.5rem;
-  margin-top: 0.5rem;
+  padding: 0.2rem 1rem;
   margin-right: 0.5rem;
-  min-width:2rem;
+  min-width:3rem;
   border-radius: 4px;
-  background-color: rgb(216, 216, 216);
+  font-size: 1.1rem;
+  font-weight: 700;
+  background-color: transparent;
   border: none;
   cursor: pointer;
 }
-.btn-bold{
-  font-weight: bolder;
+.btn-styling:hover{
+  background-color: rgba(218, 218, 218, 0.733);
 }
+
 .btn-italic{
   font-style: italic;
+  margin-left: -0.25rem;
 }
 .btn-underline{
   text-decoration: underline;
@@ -89,16 +103,26 @@ body{
   background-color: green;
   color: white;
 }
-
+.isActive{
+  background-color: black;
+  color: white;
+}
 /* Modal */
 
 .modal-wrapper{
+  display: none;
   text-align: center;
   width: 20rem;
-  height: 10rem;
+  height:auto;
   padding: 0.5rem;
   position: absolute;
   top: 50%;  
   left: 50%;
   transform: translate(-50%,-50%);  
+  background-color: white;
+  z-index: 99;
+}
+
+.modal-wrapper.show {
+  display: block;
 }
