--- a/src/index.css
+++ b/src/index.css
@@ -27,15 +27,13 @@
 .ProseMirror img {
   max-width: 20rem;
   height: auto;
-  margin: 0.7rem 2rem 0 0.5rem;
-  /* margin-top: 0.5rem;
-  margin-right: 0.5rem; */
+  margin: 0.7rem 0.7rem 0.7rem 0;
 }
-@media (max-width:556px){
- .ProseMirror img{
-   min-width: 100%;
-   margin: 0;
- }
+@media (max-width: 556px) {
+  .ProseMirror img {
+    min-width: 100%;
+    margin: 0;
+  }
 }
 
 .ProseMirror .ProseMirror-selectednode {
@@ -61,14 +59,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* flex-wrap: wrap; */
   border-radius: 3px;
   box-shadow: 0px 0px 9px 0px rgba(158, 160, 158, 0.5);
+  min-height: 3.9rem;
 }
 .mode-wrapper {
   flex: 1;
 }
-.mode{
+.mode {
   cursor: pointer;
   margin: 0 1rem;
 }
@@ -79,9 +77,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* flex-wrap: wrap; */
-  /* border-radius: 3px;
-  box-shadow: 0px 0px 9px 0px rgba(158, 160, 158, 0.5); */
 }
 @media (max-width: 556px) {
   .editing-options-container {
@@ -118,8 +113,8 @@
 .btn-styling:hover {
   background-color: rgba(218, 218, 218, 0.733);
 }
-.btn-styling.isActive:hover{
-background-color:black;
+.btn-styling.isActive:hover {
+  background-color: black;
 }
 
 .btn-italic {
@@ -145,17 +140,78 @@ background-color:black;
 .modal-wrapper {
   display: none;
   text-align: center;
-  width: 20rem;
-  height: auto;
-  padding: 0.5rem;
+  width: 100vw;
+  height: 100vh;
+
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: rgba(43, 42, 42, 0.342);
   z-index: 99;
 }
 
 .modal-wrapper.show {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content-wrapper {
+  position: relative;
+  background-color: white;
+  padding: 1rem;
+}
+.modal-title {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+}
+.url-input {
+  padding: 0.35rem;
+  border-radius: 4px;
+  margin: 0.5rem 0;
+  border: 1px solid black;
+}
+.add-link-btn {
+  padding: 0.35rem 1rem;
+  margin: 1rem 0;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.close-btn {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  background-color: transparent;
+  padding: 0.2rem;
+  border: none;
+  cursor: pointer;
+}
+.close-btn:hover {
+  background-color: grey;
+}
+
+/* Guide */
+
+.btn {
+  background-color: rgb(206, 206, 206);
+}
+.btn.btn-styling{
+  cursor:default;
+}
+.btn.btn-styling:hover{
+ background-color: rgb(206, 206, 206);
+}
+.guide-wrapper {
+  margin: 1rem 0;
+}
+.list-wrapper {
+  list-style: none;
+}
+.list-wrapper li {
+  margin: 0.5rem 0;
 }
