--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,14 @@
   --pri-color: rgb(15, 76, 159);
   --grey-color: rgb(26, 26, 26);
   --overlay-color: rgba(43, 42, 42, 0.342);
-  --z-99: 99;
+  --z-02: 2;
 }
 
 .ProseMirror {
   padding: 1rem 0;
   margin: 1rem 0;
   outline: none;
+  min-height: 90vh;
 }
 
 .ProseMirror p.is-editor-empty:first-child::before {
@@ -67,6 +68,10 @@
   align-items: center;
   border-radius: 3px;
   min-height: 3.9rem;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: var(--z-02);
 }
 .mode-wrapper {
   flex: 1;
@@ -115,7 +120,7 @@
   display: flex;
   align-items: flex-start;
 }
-.fluid{
+.fluid {
   display: inline-block;
   height: 70px;
   width: 80px;
@@ -196,7 +201,7 @@
   position: absolute;
   inset: 0;
   background-color: var(--overlay-color);
-  z-index: var(--z-99);
+  z-index: var(--z-02);
 }
 
 .modal-wrapper.show {
